--- a/navigation.html
+++ b/navigation.html
@@ -20,6 +20,12 @@
                                                <li>
 							<a href="story_writing.html">Story Writing</a>
 						</li>
+                                                 <li>
+							<a href="blog.html">Blog</a>
+						</li>
+                                                <li>
+							<a href="gallery.html">Gallery</a>
+						</li>
 						<li>
 							<a href="contact.html">Contact</a>
 						</li>
