--- a/portfolio.html
+++ b/portfolio.html
@@ -43,17 +43,17 @@
 <div class="container">
    <div class="row">
 <div class="owl-carousel owl-theme">
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
+    <div class="item"><img src="imgs/e51.jpg" alt="Jahangir Gate"></div>
+    <div class="item"><img src="imgs/e52.jpg" alt="Bangladesh Army Stadium"></div>
+    <div class="item"><img src="imgs/e53.jpg" alt=""></div>
+    <div class="item"><img src="imgs/e54.jpg" alt=""></div>
+    <div class="item"><img src="imgs/e55.jpg" alt=""></div>
+    <div class="item"><img src="imgs/e56.jpg" alt=""></div>
+    <div class="item"><img src="imgs/e51.jpg" alt=""></div>
+    <div class="item"><img src="imgs/e52.jpg" alt=""></div>
+    <div class="item"><img src="imgs/e53.jpg" alt=""></div>
+    <div class="item"><img src="imgs/e54.jpg" alt=""></div>
+    <div class="item"><img src="imgs/e55.jpg" alt=""></div>
 </div>
 </div>
 </section>
