--- a/portfolio.html
+++ b/portfolio.html
@@ -132,6 +132,7 @@ $('.owl-carousel').owlCarousel({
     loop:true,
     margin:9,
     nav:true,
+    dots:false,
     responsiveClass:true,
     responsive:{
         0:{
