--- a/story_writing.html
+++ b/story_writing.html
@@ -19,20 +19,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.theme.default.min.css">
 <style type="text/css">
- #portfolio .row {
+ .row {
   display: flex;
   flex-wrap: wrap;
   padding: 0 4px;
 }
 
 /* Create four equal columns that sits next to each other */
-  #portfolio .column {
+ .column {
   flex: 25%;
   max-width: 25%;
   padding: 0 4px;
 }
 
-#portfolio .column img {
+.column img {
   margin-top: 8px;
   vertical-align: middle;
   width: 100%;
@@ -40,7 +40,7 @@
 
 /* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 800px) {
-  #portfolio .column {
+ .column {
     flex: 50%;
     max-width: 50%;
   }
@@ -48,7 +48,7 @@
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-  #portfolio .column {
+  .column {
     flex: 100%;
     max-width: 100%;
   }
