--- a/story_writing.html
+++ b/story_writing.html
@@ -19,20 +19,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.theme.default.min.css">
 <style type="text/css">
- .row {
+ .ro {
   display: flex;
   flex-wrap: wrap;
   padding: 0 4px;
 }
 
 /* Create four equal columns that sits next to each other */
- .column {
+ .colum {
   flex: 25%;
   max-width: 25%;
   padding: 0 4px;
 }
 
-.column img {
+.colum img {
   margin-top: 8px;
   vertical-align: middle;
   width: 100%;
@@ -40,7 +40,7 @@
 
 /* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 800px) {
- .column {
+ .colum {
     flex: 50%;
     max-width: 50%;
   }
@@ -48,7 +48,7 @@
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-  .column {
+  .colum {
     flex: 100%;
     max-width: 100%;
   }
@@ -77,8 +77,8 @@
 		</section>
                 <section class="p-v-xl bg-light">
                    <div class="container">
-                       <div id="portfolio" class="row">
-  <div id="portfolio" class="column">
+                       <div id="portfolio" class="ro">
+  <div id="portfolio" class="colum">
     <img src="imgs/e51.jpg">
     <img src="imgs/e52.jpg">
     <img src="imgs/e53.jpg">
@@ -87,7 +87,7 @@
     <img src="imgs/e56.jpg">
     <img src="imgs/e57.jpg">
   </div>
-  <div id="portfolio" class="column">
+  <div id="portfolio" class="colum">
     <img src="imgs/e58.jpg">
     <img src="imgs/e59.jpg">
     <img src="imgs/e60.jpg">
@@ -95,7 +95,7 @@
     <img src="imgs/e62.jpg">
     <img src="imgs/e63.jpg">
   </div>
-  <div id="portfolio" class="column">
+  <div id="portfolio" class="colum">
     <img src="imgs/e64.jpg">
     <img src="imgs/e51.jpg">
     <img src="imgs/e52.jpg">
@@ -104,7 +104,7 @@
     <img src="imgs/e55.jpg">
     <img src="imgs/e56.jpg">
   </div>
-  <div id="portfolio" class="column">
+  <div id="portfolio" class="colum">
     <img src="imgs/e57.jpg">
     <img src="imgs/e58.jpg">
     <img src="imgs/e59.jpg">
