--- a/blog.html
+++ b/blog.html
@@ -102,8 +102,8 @@
 <script type="text/javascript" src=""></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js"></script>
-<script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
-<script src="https://www.amcharts.com/lib/3/serial.js"></script>
+<script type="text/javascript" src="js/chartlib3.js"></script>
+<script type="text/javascript" src="js/chartlibserial.js"></script>
 
 <script>
 var chart = AmCharts.makeChart("chartdiv", {
