--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
 <div class="container">
    <div class="row">
 <script type="text/javascript" src="js/chartlib3.js"></script>
-<script type="text/javascript" src="js/chartlibserial.js"></script>
+<script type="text/javascript" src="js/chartlibserial3.js"></script>
 
 <script>
   var chart = AmCharts.makeChart("chartdiv", {
