--- a/blog.html
+++ b/blog.html
@@ -61,7 +61,7 @@
   "dataProvider": [{
     "country": "USA",
     "visits": 4025,
-    "color": "#FF0F00"
+    "color": "#0C8ECF"
   }, {
     "country": "China",
     "visits": 1882,
