--- a/blog.html
+++ b/blog.html
@@ -16,9 +16,7 @@
 		<link rel="stylesheet" href="dist/css/bootaide.min.css" />
 <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 <link rel="stylesheet" href="https://kit.fontawesome.com/4ff5cc0e27.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.theme.default.min.css">
-<style type="text/css">
+    <style type="text/css">
 #chartdiv {
   width: 100%;
   height: 335px;
@@ -100,7 +98,7 @@
     "balloonText": "[[category]]: <b>[[value]]</b>",
     "colorField": "color",
     "fillAlphas": 0.75,
-    "lineAlpha": 0.1,
+    "lineAlpha": 0.5,
     "type": "column",
     "topRadius": 1,
     "valueField": "visits"
@@ -123,7 +121,7 @@
     "menuTop": "20px",
     "menuRight": "20px",
     "menuItems": [{
-      "icon": '/lib/3/images/export.png',
+      "icon": '/imgs/export.png',
       "format": 'png'
     }]
   }
