--- a/about.html
+++ b/about.html
@@ -68,9 +68,7 @@
 		    </div>
 		  </div>
 		</section>
-<section>
-<div class="container">
-   <div class="row">
+<section class="p-v-xl bg-light">
 <nav class="navbar navbar-default">
 	<div class="container-fluid">
 		<div class="navbar-header">
@@ -95,7 +93,82 @@
 					<p><a class="btn btn-primary btn-block">Button Text</a></p>
 					
 				</div>
-</div>
+			</article>
+
+			<article class="thumbnail item" itemscope="" itemtype="http://schema.org/CreativeWork">
+				<a class="blog-thumb-img" href="/5-ways-baby-boomers-changing-healthcare/" title="">
+					<img src="http://placehold.it/500x300/4DC7A0/ffffff" class="img-responsive" />
+				</a>
+				<div class="caption">
+					<h4 itemprop="headline">
+            <a href="#" rel="bookmark">5 Ways Baby Boomers Are Changing Healthcare</a>
+          </h4>
+					<p itemprop="text" class="flex-text text-muted">5 ways baby boomers are changing healthcare Starting in 2011, 3 million baby boomers each year reach retirement age asdf asdfas dfasd fasdf asdf asfasdf asdf....</p>									<p>	<a href="#" class="btn btn-primary btn-block">Button Text</a></p>
+
+				</div>
+			</article>
+
+			<article class="thumbnail item" itemscope="" itemtype="http://schema.org/CreativeWork">
+				<a class="blog-thumb-img" href="/5-ways-baby-boomers-changing-healthcare/" title="">
+					<img src="http://placehold.it/500x300/4DC7A0/ffffff" class="img-responsive" />
+				</a>
+				<div class="caption">
+					<h4 itemprop="headline">
+            <a href="#" rel="bookmark">5 Ways Baby Boomers Are Changing Healthcare</a>
+          </h4>
+					<p itemprop="text" class="flex-text text-muted">5 ways baby boomers are changing healthcare Starting in 2011, 3 million baby boomers each year reach retirement age....</p>
+			<p>							<a href="#" class="btn btn-primary btn-block">Button Text</a></p>
+
+				</div>
+			</article>
+
+			<article class="thumbnail item" itemscope="" itemtype="http://schema.org/CreativeWork">
+				<a class="blog-thumb-img" href="/5-ways-baby-boomers-changing-healthcare/" title="">
+					<img src="http://placehold.it/500x300/4DC7A0/ffffff" class="img-responsive" />
+				</a>
+				<div class="caption">
+					<h4 itemprop="headline">
+            <a href="#" rel="bookmark">5 Ways Baby Boomers Are Changing Healthcare</a>
+          </h4>
+					<p itemprop="text" class="flex-text text-muted">5 ways baby boomers are changing healthcare Starting in 2011, 3 million baby boomers each year reach retirement age....</p>
+										<a href="#" class="btn btn-primary btn-block">Button Text</a>
+
+				</div>
+			</article>
+
+			<article class="thumbnail item" itemscope="" itemtype="http://schema.org/CreativeWork">
+				<a class="blog-thumb-img" href="/5-ways-baby-boomers-changing-healthcare/" title="">
+					<img src="http://placehold.it/500x300/4DC7A0/ffffff" class="img-responsive" />
+				</a>
+				<div class="caption">
+					<h4 itemprop="headline">
+            <a href="#" rel="bookmark">5 Ways Baby Boomers Are Changing Healthcare</a>
+          </h4>
+					<p itemprop="text" class="flex-text text-muted">5 ways baby boomers are changing healthcare Starting in 2011, 3 million baby boomers each year reach retirement age....</p>
+										<a href="#" class="btn btn-primary btn-block">Button Text</a>
+
+				</div>
+			</article>
+
+			<article class="thumbnail item" itemscope="" itemtype="http://schema.org/CreativeWork">
+				<a class="blog-thumb-img" href="/5-ways-baby-boomers-changing-healthcare/" title="">
+					<img src="http://placehold.it/500x300/4DC7A0/ffffff" class="img-responsive" />
+				</a>
+				<div class="caption">
+					<h4 itemprop="headline">
+            <a href="#" rel="bookmark">5 Ways Baby Boomers Are Changing Healthcare</a>
+          </h4>
+					<p itemprop="text" class="flex-text text-muted">5 ways baby boomers are changing healthcare Starting in 2011, 3 million baby boomers each year reach retirement age....</p>
+										<a href="#" class="btn btn-primary btn-block">Button Text</a>
+
+				</div>
+			</article>
+		</div>
+		<!-- #owl-demo-2 -->
+	</div>
+	<!-- .container -->
+
+</section>
 </section>
         <section class="separator">
 			<div class="decor-svg">
