--- a/contact.html
+++ b/contact.html
@@ -42,8 +42,15 @@
 <section>
 <div class="container">
    <div class="row p-v m-t-md text-center">
-    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1guqdjlzNbLun3ohxZEcOK4jvsqV3T7JV&ehbc=2E312F" width="400" height="450"></iframe>
-   </div>
+    <iframe
+  width="600"
+  height="450"
+  style="border:0"
+  loading="lazy"
+  allowfullscreen referrerpolicy="no-referrer-when-downgrade"
+  src="https://www.google.com/maps/embed/v1/place?key=1guqdjlzNbLun3ohxZEcOK4jvsqV3T7JV&ehbc=2E312F&q=Space+Needle,Seattle+WA">
+</iframe>
+  </div>
 </div>
 </section>
         <section class="separator">
