--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
   style="border:0"
   loading="lazy"
   allowfullscreen referrerpolicy="no-referrer-when-downgrade"
-  src="https://www.google.com/maps/embed/v1/place?key=1guqdjlzNbLun3ohxZEcOK4jvsqV3T7JV&ehbc=2E312F&q=Space+Needle,Seattle+WA">
+  src="https://www.google.com/maps/embed/v1/place?key=1guqdjlzNbLun3ohxZEcOK4jvsqV3T7JV&q=Space,Seattle">
 </iframe>
   </div>
 </div>
