--- a/navigation.html
+++ b/navigation.html
@@ -20,6 +20,9 @@
                                                <li>
 							<a href="story_writing.html">Story Writing</a>
 						</li>
+                                                <li>
+							<a href="sketch.html">Sketch Flip</a>
+						</li>
                                                  <li>
 							<a href="blog.html">Blog</a>
 						</li>
