--- a/navigation.html
+++ b/navigation.html
@@ -18,10 +18,10 @@
 							<a href="portfolio.html">Portfolio</a>
 						</li>
                                                <li>
-							<a href="story_writing.html">Story Writing</a>
+							<a href="story_writing.html">Story</a>
 						</li>
                                                 <li>
-							<a href="sketch.html">Sketch Flip</a>
+							<a href="sketch.html">Sketch</a>
 						</li>
                                                  <li>
 							<a href="blog.html">Blog</a>
