--- a/navigation.html
+++ b/navigation.html
@@ -15,7 +15,7 @@
 							<a href="about.html">About</a>
 						</li>
                                                 <li>
-							<a href="portfolio.html">Portfolio</a>
+							<a href="portfolio.html">Pfofile</a>
 						</li>
                                                <li>
 							<a href="story_writing.html">Story</a>
