--- a/sketch.html
+++ b/sketch.html
@@ -51,7 +51,7 @@
 		</section>
 
 <section class="p-v-xl bg-light">
-<div id="flipbook">
+<div id="magazine">
 	<div style="background-image:url(imgs/e51.jpg);"></div>
 	<div style="background-image:url(imgs/e52.jpg);"></div>
 	<div style="background-image:url(imgs/e53.jpg);"></div>
