--- a/navigation.html
+++ b/navigation.html
@@ -4,7 +4,7 @@
 					<button class="btn btn-link visible-xs pull-right m-r m-t-sm" type="button" data-toggle="collapse" data-target=".navbar-collapse">
 						<i class="fa fa-bars"></i>
 					</button>
-					<a href="." class="navbar-brand m-r-lg"><img src="imgs/logo.png" class="m-r-sm hide"><span class="h3 font-bold">Musammat Samina</span></a>
+					<a href="." class="navbar-brand m-r-lg"><img src="imgs/logo.png" class="m-r-sm hide"><span class="h3 font-bold">Mst. Samina</span></a>
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
@@ -15,7 +15,7 @@
 							<a href="about.html">About</a>
 						</li>
                                                 <li>
-							<a href="portfolio.html">Pfofile</a>
+							<a href="portfolio.html">Portfolio</a>
 						</li>
                                                <li>
 							<a href="story_writing.html">Story</a>
