--- a/sketch.html
+++ b/sketch.html
@@ -12,9 +12,10 @@
 	    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" />
 	    <link rel="stylesheet" href="bower_components/simple-line-icons/css/simple-line-icons.css" />
 	    <link rel="stylesheet" href="dist/css/bootaide.min.css" />
-<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 <link rel="stylesheet" href="https://kit.fontawesome.com/4ff5cc0e27.css" crossorigin="anonymous">
-    <script type="text/javascript" src="js/turn.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js">
+<script type="text/javascript" src="js/turn.min.js"></script>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
 <style type="text/css">
 #magazine{
