--- a/sketch.html
+++ b/sketch.html
@@ -51,12 +51,12 @@
 
 <section class="p-v-xl bg-light">
 <div id="magazine">
-	<div style="background-image:url(imgs/e51.jpg);"></div>
-	<div style="background-image:url(imgs/e52.jpg);"></div>
-	<div style="background-image:url(imgs/e53.jpg);"></div>
-	<div style="background-image:url(imgs/e54.jpg);"></div>
-	<div style="background-image:url(imgs/e55.jpg);"></div>
-	<div style="background-image:url(imgs/e56.jpg);"></div>
+	<div style="background-image:url(https://musammatsamina.github.io/imgs/e51.jpg);"></div>
+	<div style="background-image:url(https://musammatsamina.github.io/imgs/e52.jpg);"></div>
+	<div style="background-image:url(https://musammatsamina.github.io/imgs/e53.jpg);"></div>
+	<div style="background-image:url(https://musammatsamina.github.io/imgs/e54.jpg);"></div>
+	<div style="background-image:url(https://musammatsamina.github.io/imgs/e55.jpg);"></div>
+	<div style="background-image:url(https://musammatsamina.github.io/imgs/e56.jpg);"></div>
 </div>
 </section>
 <section class="separator">
