--- a/navigation.html
+++ b/navigation.html
@@ -49,6 +49,9 @@
 							<a class="m-r-sm" href="https://twitter.com/seagirlsabo"><i class="fa fa-twitter"></i></a>
 							<a class="m-r-sm" href="https://facebook.com/musammat.samina"><i class="fa fa-facebook"></i></a>
 							<a class="m-r-sm" href="http://about.me/imsamina"><i class="fa fa-codepen"></i></a>
+							<a class="m-r-sm" href="https://livelearnislam773354777.wordpress.com"><i class="fas fa-feather"></i></a>
+							
+                                                        <a class="m-r-sm" href="https://www.scribd.com/user/550088416/Musammat-Samina"><i class="fa fa-brands fa-wordpress"></i></a>
 							<a class="m-r-sm" href="https://www.linkedin.com/in/musammatsamina-47577222"><i class="fa fa-linkedin"></i></a>
                                                         <a class="m-r-sm" href="https://www.facebook.com/profile.php?id=100075473425112&mibextid=ZbWKwL"><i class="fa fa-graduation-cap"></i></a>
 							<a class="m-r-sm" href="https://www.github.com/musammatsamina"><i class="fa fa-github"></i></a>
