--- a/gallery.html
+++ b/gallery.html
@@ -34,7 +34,14 @@
 		        <p class="">some awesome tour i've done!</p>
 		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 		      </div>			
-				  
+				     <div class="b-l b-2x p-l-xl m-b-lg">
+											<div class="m-b-xl text-center p-v m-v-xl"> 
+                              <a href="https://prothomalo.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/prothomalo.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		        <h3 class="text-info">Prothom Alo  </h3>
+				      </a>
+		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
+					     </div>
 		    </div>
 		  </div>
 		</section>
