--- a/gallery.html
+++ b/gallery.html
@@ -51,6 +51,11 @@
 		        <h3 class="text-info">Ittefaq</h3>
 				      </a>						
 		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
+						  <a href="https://tbsnews.net" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/tbsnews.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		        <h3 class="text-info">TVSNEWS (DOT) NET</h3>
+				      </a>						
+		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 					     </div>
 		    </div>
 		  </div>
