--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,7 @@
 		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 		      </div>			
 				     <div class="b-l b-2x p-l-xl m-b-lg">
-											<div class="m-b-xl text-center p-v m-v-xl"> <div class="col-md-4">
+											<div class="m-b-xl text-center p-v m-v-xl"><div class="row"> <div class="col-md-4">
                               <a href="https://prothomalo.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/prothomalo.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h3 class="text-info">Prothom Alo  </h3>
@@ -84,7 +84,7 @@
 				      </a>
 				       <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 				        </div>
-					     </div>
+					     </div></div>
 		    </div>
 		  </div>
 		</section>
