--- a/navigation.html
+++ b/navigation.html
@@ -21,7 +21,7 @@
 							<a href="story_writing.html">Story</a>
 						</li>
                                                 <li>
-							<a href="sketch.html">Sketch</a>
+							<a href="poem.html">Poem</a>
 						</li>
                                                  <li>
 							<a href="blog.html">Blog</a>
