--- a/poem.html
+++ b/poem.html
@@ -147,8 +147,11 @@ $('.owl-carousel').owlCarousel({
     margin:5,
     nav:true,
     dots:false,
-    responsiveClass:true,
-    responsive:{
+    navContainer: '#nav',
+navText: [
+'<i class="fa fa-angle-left"></i>',  
+'<i class="fa fa-angle-right"></i>'],  responsiveClass:true,
+  responsive:{
         0:{
             items:1,
             nav:true
