--- a/poem.html
+++ b/poem.html
@@ -68,6 +68,28 @@
 <div class="item"><img src="imgs/p23.jpg" alt=""></div>
 <div class="item"><img src="imgs/p24.jpg" alt=""></div>
 
+
+<div class="item"><img src="imgs/p25.jpg" alt=""></div>
+<div class="item"><img src="imgs/p26.jpg" alt=""></div>
+<div class="item"><img src="imgs/p27.jpg" alt=""></div>
+<div class="item"><img src="imgs/p28.jpg" alt=""></div>
+<div class="item"><img src="imgs/p29.jpg" alt=""></div>
+<div class="item"><img src="imgs/p30.jpg" alt=""></div>
+<div class="item"><img src="imgs/p31.jpg" alt=""></div>
+<div class="item"><img src="imgs/p32.jpg" alt=""></div>
+<div class="item"><img src="imgs/p33.jpg" alt=""></div>
+<div class="item"><img src="imgs/p34.jpg" alt=""></div>
+<div class="item"><img src="imgs/p35.jpg" alt=""></div>
+<div class="item"><img src="imgs/p36.jpg" alt=""></div>
+<div class="item"><img src="imgs/p37.jpg" alt=""></div>
+<div class="item"><img src="imgs/p38.jpg" alt=""></div>
+<div class="item"><img src="imgs/p39.jpg" alt=""></div>
+<div class="item"><img src="imgs/p40.jpg" alt=""></div>
+<div class="item"><img src="imgs/p41.jpg" alt=""></div>
+<div class="item"><img src="imgs/p42.jpg" alt=""></div>
+<div class="item"><img src="imgs/p43.jpg" alt=""></div>
+<div class="item"><img src="imgs/p44.jpg" alt=""></div>
+<div class="item"><img src="imgs/p45.jpg" alt=""></div>
 </div>
 </div>
 </section>
