--- a/blog.html
+++ b/blog.html
@@ -39,6 +39,25 @@
 		      <div class="col-sm-8 col-sm-offset-2 text-center p-v m-v-xl">
 		      	<i class="icon-paper-plane text-4x"></i>
 		        <h1 class="text-dark">Blog</h1>
+			      <h2 class="text-danger"> 
+				      <?php
+include_once 'bangla-date.php';
+$bn = new BanglaDate(time());
+print_r($bn->get_date());
+
+echo '<br>';
+$bn->set_time(time(), 0);
+print_r($bn->get_date());
+
+echo '<br>';
+$bn->set_time(strtotime('05-03-1987'), 0);
+print_r($bn->get_date());
+
+echo '<br>';
+$bn->set_time(strtotime('05-03-1987'), 6);
+print_r($bn->get_date());
+				      ?>
+			      </h2>
 		        <p class=""> Chart initial stage preview...</p>
 		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 		      </div>			
