--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
 		        <h1 class="text-dark">Blog</h1>
 			      <h2 class="text-danger"> 
 				      <?php
-include_once 'bangla-date.php';
+include_once 'class.banglaDate.php';
 $bn = new BanglaDate(time());
 print_r($bn->get_date());
 
