--- a/blog.html
+++ b/blog.html
@@ -140,6 +140,13 @@ series2.columns.template.strokeWidth = 2;
 </div>
 </div>
 </section>
+
+<section class="separator">
+
+<div id="ochart"></div>
+
+</section>
+
         <section class="separator">
 			<div class="decor-svg">
 				<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
