--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,8 @@
 	    <link rel="stylesheet" href="bower_components/owl-carousel2/dist/assets/owl.carousel.min.css" />
         <link rel="stylesheet" href="bower_components/owl-carousel2/dist/assets/owl.theme.default.min.css" />
 		<link rel="stylesheet" href="dist/css/bootaide.min.css" />
-<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+
+		<link rel="stylesheet" href="dist/css/ochart.css" />
 <link rel="stylesheet" href="https://kit.fontawesome.com/4ff5cc0e27.css" crossorigin="anonymous">
     <style type="text/css">
 #chartdiv {
@@ -25,6 +26,8 @@
 </style>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 		
+<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+
 	</head>
 	<body>
 		<!--[if lt IE 10]>
@@ -140,6 +143,13 @@ series2.columns.template.strokeWidth = 2;
 </div>
 </div>
 </section>
+
+<section class="separator">
+
+<div id="ochart"></div>
+
+</section>
+
         <section class="separator">
 			<div class="decor-svg">
 				<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
@@ -162,6 +172,7 @@ series2.columns.template.strokeWidth = 2;
 
 		<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="bower_components/bootstrapvalidator/dist/js/bootstrapValidator.min.js"></script>
+<script src="dist/js/ochart.js"></script>
 		<script src="bower_components/headroom.js/dist/headroom.min.js"></script> 
 		<script src="bower_components/owl-carousel2/dist/owl.carousel.min.js"></script>
 		<script src="dist/js/bootaide.min.js"></script>
