--- a/blog.html
+++ b/blog.html
@@ -144,7 +144,7 @@ series2.columns.template.strokeWidth = 2;
 </div>
 </section>
 
-<section class="separator">
+<section class="">
 
 <div id="ochart"></div>
 
