--- a/blog.html
+++ b/blog.html
@@ -145,9 +145,11 @@ series2.columns.template.strokeWidth = 2;
 </section>
 
 <section class="">
-
+<div class="container">
+   <div class="row">
 <div id="ochart"></div>
-
+</div>
+</div>
 </section>
 
         <section class="separator">
