--- a/blog.html
+++ b/blog.html
@@ -151,7 +151,7 @@ series2.columns.template.strokeWidth = 2;
 </div>
 		</section>
 	
-<section class="">
+<section>
 <div class="container">
    <div class="row">
 <div id="ochart"></div>
