--- a/about.html
+++ b/about.html
@@ -47,6 +47,9 @@
 
 /* Demo Styles */
 </style>
+
+
+<link rel="stylesheet" href="dist/css/ochart.css" />
 	</head>
 	<body>
 		<!--[if lt IE 10]>
@@ -169,6 +172,25 @@
 	<!-- .container -->
 
 </section>
+
+
+ <section class="separator">
+			<div class="decor-svg">
+				<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
+</div>
+		</section>
+
+	<section class="p-v-xl bg-light">
+		  <div class="container">
+		    <div class="row">
+		      <div class="col-sm-8 col-sm-offset-2 text-center p-v m-v-xl">
+		      	<div id="ochat"></div>
+		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
+		      </div>			
+				  
+		    </div>
+		  </div>
+		</section>
 </section>
         <section class="separator">
 			<div class="decor-svg">
@@ -196,6 +218,7 @@
 		<script src="bower_components/headroom.js/dist/headroom.min.js"></script> 
 		<script src="bower_components/owl-carousel2/dist/owl.carousel.min.js"></script>
 		<script src="dist/js/bootaide.min.js"></script>
+<script src="dist/js/ochart.js"></script>
 <script>
       function addHTML() {
          var el, i, domEl, fileName, xmlHttp;
