--- a/about.html
+++ b/about.html
@@ -184,7 +184,7 @@
 		  <div class="container">
 		    <div class="row">
 		      <div class="col-sm-8 col-sm-offset-2 text-center p-v m-v-xl">
-		      	<div id="ochat"></div>
+		      	<div id="ochart"></div>
 		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 		      </div>			
 				  
