--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 		
 <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-<link rel="stylesheet" type="text/css" href="onScreenKeyboard.css" />        
+<link rel="stylesheet" type="text/css" href="dist/css/onScreenKeyboard.css" />        
       
 	</head>
 	<body>
@@ -182,7 +182,7 @@ series2.columns.template.strokeWidth = 2;
 		<script src="bower_components/headroom.js/dist/headroom.min.js"></script> 
 		<script src="bower_components/owl-carousel2/dist/owl.carousel.min.js"></script>
 		<script src="dist/js/bootaide.min.js"></script>
-        <script type="text/javascript" src="jquery.onScreenKeyboard.min.js"></script>
+        <script type="text/javascript" src="dist/js/jquery.onScreenKeyboard.min.js"></script>
 <script>
     $('.field_search').onScreenKeyboard({
         rewireReturn: 'submit',
