--- a/blog.html
+++ b/blog.html
@@ -144,7 +144,13 @@ series2.columns.template.strokeWidth = 2;
 </div>
 </section>
 
-<section class="">
+<section class="separator">
+			<div class="decor-svg">
+				<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
+</div>
+		</section>
+
+<section class="bg-light">
 			<div class="container">
 				<div class="row p-v m-t-md text-center">
 					
