--- a/poem.html
+++ b/poem.html
@@ -90,6 +90,8 @@
 <div class="item"><img src="imgs/p43.jpg" alt=""></div>
 <div class="item"><img src="imgs/p44.jpg" alt=""></div>
 <div class="item"><img src="imgs/p45.jpg" alt=""></div>
+<div class="item"><img src="imgs/p46.jpg" alt=""></div>
+<div class="item"><img src="imgs/p47.jpg" alt=""></div>
 </div>
 </div>
 </section>
